// src/proto/notification.proto
syntax = "proto3";

package notification;

service NotificationService {
  rpc getAllNotifications (WithUserIdRequest) returns (NotificationListResponse);
  rpc getUnreadCount (WithUserIdRequest) returns (CountResponse);
  rpc getNotificationById (WithIdRequest) returns (NotificationResponse);
  rpc markAsRead (WithIdRequest) returns (Empty);
  rpc markAllAsRead (WithUserIdRequest) returns (Empty);
}

// =========================================
// Data Objects
// =========================================

message Empty {}

message Notification {
  int32 id = 1;
  string message = 2;
  bool isRead = 3;
  string type = 4;
  string createdAt = 5;
  int32 recipientId = 6;
}
// =========================================
// Requests
// =========================================

message WithIdRequest {
  int32 id = 1;
}

message WithUserIdRequest {
  int32 userId = 1;
}

// =========================================
// Responses
// =========================================

message NotificationResponse {
  Notification notification = 1; // Dados do usuário
}

message NotificationListResponse {
  repeated Notification notifications = 1; // Lista de usuários
}

message CountResponse {
  int32 count = 1; // Dados do usuário
}